# stardust-crusaders

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE
docs/adr/: 0001-layered-architecture.md  adr-0001_rendering-strategy.md
docs/design/: shader-studies.ipynb  ui-layout.html  ui-spec.md  ui-specs.md  vision-scope.md  webgl-function-diagram.html
docs/ui-design/: main-screen.html
src/: main.c
src/v0/: 01-star-scaling.css  01-star-scaling.html  01-star-scaling.js  index.html  main.js
src/v0/js/: buffer-mgmt.js  draw-scene.js  geometry-data.js  geometry-generation.js  init-buffers.js  main.js
src/v0/styles/assets/shaders/: black-hole.frag  fragment-shader.frag  kurzgesagt-star.frag  star-activity.frag  vertex-shader.vert
